Mais alguns ajustes

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -2,3 +2,7 @@
 Add your custom style here
 ==================================*/
 #content h1, h2, h3, h4, h5, h6 {color: #FFF;}
+
+#project-jump .drdn-items>* {
+    color: #b4b4b4 !important;
+}
