--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -286,6 +286,7 @@ a:hover {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   padding: 5px 0;
   font-weight: 400;
+  color: #dbd6d6 !important;
 }
 
 #sidebar ul li {
@@ -810,6 +811,7 @@ div.modal {
 
 .ui-widget-content {
   color: #c2c2c2 !important;
+  background: #343434 !important;
 }
 
 
