--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -25,7 +25,7 @@ div.wiki pre {
 }
 
 .syntaxhl .s1 {
-    background-color: #fac019 !important;
+    background-color: #93814e !important;
 }
 
 .syntaxhl .s2 {
